Actualització coses de LaTeX

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -114,7 +114,7 @@
 
 \newcommand{\divides}{\mathrel{|}}
 \newcommand{\ndivides}{\mathrel{\nmid}}
-\newcommand{\abs}[1]{\left|#1\right|}
+\newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\lxor}{\veebar}
 \newcommand{\sii}{\iff}
@@ -221,7 +221,7 @@
 		\subfile{parts/EDOS1.tex}
 \end{document} %WEB TO' MOLONA: http://www-history.mcs.st-and.ac.uk/BiogIndex.html
 
-% Canviar \[ per {$$ i \] per $$}, definir commanda per [x] i canviar-les totes. Potser amb paràmetres (per barra, claudators i superíndexos) Potser dues commandes per overline i claudators
+% Definir commanda per [x] i canviar-les totes. Potser amb paràmetres (per barra, claudators i superíndexos) Potser dues commandes per overline i claudators
 
 % \Rightarrow \implica; \Leftarrow \implicatper; \Leftrightarrow \sii
 
