--- a/parts/AlgebraLineal.tex
+++ b/parts/AlgebraLineal.tex
@@ -730,13 +730,13 @@
 			p_{m,1} & \cdots & p_{m,r} & 0 & \cdots & 0
 			\end{array}\right]=
 			\left[\begin{array}{ccc|ccc}
-			q_{1,1,} & \cdots & q_{1,r} & q_{1,r+1} & \cdots & q_{1,n} \\
+			q_{1,1} & \cdots & q_{1,r} & q_{1,r+1} & \cdots & q_{1,n} \\
 			\vdots & & \vdots & \vdots & & \vdots \\
 			q_{s,1} & \cdots & q_{s,r} & q_{s,r+1} & \cdots & q_{s,n} \\\hline
 			0 & \cdots & 0 & 0 & \cdots & 0 \\
 			\vdots & & \vdots & \vdots & & \vdots \\
 			0 & \cdots & 0 & 0 & \cdots & 0
-			\end{array}\right].\]
+			\end{array}\right]\]
 			Per tant
 			\[\left[\begin{matrix}
 			0 & \cdots & 0 \\
