--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -24,7 +24,7 @@
 	\end{definition}
 	\subsection{Proposicions}
 	\begin{proposition}\label{prop:determinant diferent de zero linealment independents}
-		Vectors linealment independents \(\Leftrightarrow\) determinant no nul.
+		Vectors linealment independents \(\sii\) determinant no nul.
 	\end{proposition}
 	\subsection{Teoremes}
 	\begin{theorem}
